kube/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: phea/sdc-db:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /data/db
            - name: p-init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: db-pvc
        - name: p-init-sql
          configMap:
            name: p-init-sql
