kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-example
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /loaderio-94849da8be9b83b4d55dc1791ed6561f
            pathType: Prefix
            backend:
              service:
                name: ubuntu-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 80
